# s2cloudless-optimized

./: .gitignore  .pre-commit-config.yaml  README.md  environment.macos.yml  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml
scripts/: ci  clip
src/s2cloudless_optimized/: __init__.py  cli.py  constants.py  enums.py  granule.py  utils.py
tests/: conftest.py  test_module.py
tests/data/IMG_DATA/: T31TDH_20150726T105026_B01.jp2  T31TDH_20150726T105026_B02.jp2  T31TDH_20150726T105026_B03.jp2  T31TDH_20150726T105026_B04.jp2  T31TDH_20150726T105026_B05.jp2  T31TDH_20150726T105026_B06.jp2  T31TDH_20150726T105026_B07.jp2  T31TDH_20150726T105026_B08.jp2  T31TDH_20150726T105026_B09.jp2  T31TDH_20150726T105026_B10.jp2  T31TDH_20150726T105026_B11.jp2  T31TDH_20150726T105026_B12.jp2  T31TDH_20150726T105026_B8A.jp2  T31TDH_20150726T105026_TCI.jp2
