[metadata]
name = s2cloudless-optimized
version = 0.0.1
author = Pete Gadomski
author_email = pete.gadomski@gmail.com
description = A rebuild of https://github.com/sentinel-hub/sentinel2-cloud-detector to optimize memory usage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gadomski/s2cloudless-optimized
project_urls =
    Bug Tracker = https://github.com/gadomski/s2cloudless-optimized/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    click ~= 8.0
    click-log ~= 0.3.2
    rasterio ~= 1.2
    lightgbm ~= 3.3
    scikit-image ~= 0.18.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    s2cloudless = s2cloudless_optimized.cli:main

[options.package_data]
s2cloudless_optimized = pixel_s2_cloud_detector_lightGBM_v0.1.txt
